--- a/.gitignore
+++ b/.gitignore
@@ -6,27 +6,27 @@ sitemap.xml
 sitemap.xml.gz
 
 # WordPress Core files and folders
-index.php
-license.txt
-readme.html
-wp-activate.php
-wp-admin/
-wp-admin
-wp-blog-header.php
-wp-comments-post.php
-wp-config.php
-wp-config-sample.php
-wp-cron.php
-wp-includes/
-wp-includes
-wp-links-opml.php
-wp-load.php
-wp-login.php
-wp-mail.php
-wp-settings.php
-wp-signup.php
-wp-trackback.php
-xmlrpc.php
+/index.php
+/license.txt
+/readme.html
+/wp-activate.php
+/wp-admin/
+/wp-admin
+/wp-blog-header.php
+/wp-comments-post.php
+/wp-config.php
+/wp-config-sample.php
+/wp-cron.php
+/wp-includes/
+/wp-includes
+/wp-links-opml.php
+/wp-load.php
+/wp-login.php
+/wp-mail.php
+/wp-settings.php
+/wp-signup.php
+/wp-trackback.php
+/xmlrpc.php
 
 # Languages
 wp-content/languages/
